# anonymous-chat-room

./: alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 09f0e9d9b871_create_message_and_user_tables.py  28b488e24d39_create_user_and_message_tables.py  859538b1c801_create_user_and_message_tables.py
app/: config.py  database.py  main.py  oauth2.py  schemas.py  utils.py
app/models/: __init__.py  base.py  message.py  mixins.py  user.py
app/routers/: auth.py  message.py  template.py  user.py
app/static/css/: fadeAnimation.css
app/static/js/: addMessageToUI.js  fetchLatestMessages.js  flashNotification.js  login.js
app/templates/: base.html  chat.html  index.html  login.html  profile.html  signup.html
